--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 bevy = "0.7.0"
+iyes_loopless = "0.6.1"
 rand = "0.8.5"
 
 # Enable a small amount of optimization in debug mode
