--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "snakes2"
+name = "snakes"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bevy = "0.7.0"
+bevy = { version = "0.7.0", features = ["wayland"] }
 iyes_loopless = "0.6.1"
 rand = "0.8.5"
 
