--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,12 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bevy = { version = "0.7.0", features = ["wayland"] }
+bevy = { version = "0.7.0", features = ["wayland", "serialize"] }
 crossbeam-channel = "0.5.6"
 iyes_loopless = "0.6.1"
 rand = "0.8.5"
+serde = { version = "1.0.140", features = ["derive"] }
+serde_yaml = "0.8.26"
 
 # Enable a small amount of optimization in debug mode
 [profile.dev]
