--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 bevy = { version = "0.7.0", features = ["wayland", "serialize"] }
+clap = { version = "3.2.15", features = ["derive"] }
 crossbeam-channel = "0.5.6"
 iyes_loopless = "0.6.1"
 rand = "0.8.5"
