--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "snakes"
-version = "0.1.1-alpha"
+version = "0.1.2-alpha"
 edition = "2021"
 license = "Apache-2.0"
 
@@ -14,6 +14,7 @@ iyes_loopless = "0.6.1"
 rand = "0.8.5"
 serde = { version = "1.0.140", features = ["derive"] }
 serde_yaml = "0.8.26"
+wait-timeout = "0.2.0"
 
 # Enable a small amount of optimization in debug mode
 [profile.dev]
