--- a/.github/workflows/discord.yml
+++ b/.github/workflows/discord.yml
@@ -18,4 +18,4 @@ jobs:
           DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
         uses: Ilshidur/action-discord@0.3.2
         with:
-          args: 'Snakes! ${{ github.event.release.tag_name }} has been released. Download it here ${{ github.event.release.html_url }}'
+          args: '<@&1001811147831386182>, Snakes! ${{ github.event.release.tag_name }} has been released. Download it here ${{ github.event.release.html_url }}'
