--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "snakes"
-version = "0.2.0-beta"
+version = "0.2.1-beta"
 edition = "2021"
 license = "Apache-2.0"
 
@@ -8,6 +8,7 @@ license = "Apache-2.0"
 
 [dependencies]
 bevy = { version = "0.7.0", features = ["wayland", "serialize"] }
+bevy_turborand = "0.1.0"
 clap = { version = "3.2.15", features = ["derive"] }
 crossbeam-channel = "0.5.6"
 iyes_loopless = "0.6.1"
