--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "snakes"
-version = "0.2.1-beta"
+version = "0.3.0"
 edition = "2021"
 license = "Apache-2.0"
 
@@ -14,8 +14,9 @@ crossbeam-channel = "0.5.6"
 iyes_loopless = "0.6.1"
 rand = "0.8.5"
 serde = { version = "1.0.140", features = ["derive"] }
-serde_yaml = "0.8.26"
+serde_yaml = "0.9.1"
 wait-timeout = "0.2.0"
+bevy-inspector-egui = "0.11.0"
 
 # Enable a small amount of optimization in debug mode
 [profile.dev]
