--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -99,7 +99,7 @@ jobs:
         uses: softprops/action-gh-release@v1
         with:
           files: |
-            target/${{ matrix.job.target }}/release/snakes-*.tar.gz
-            target/${{ matrix.job.target }}/release/snakes-*.sha256
+            snakes-*-${{ matrix.job.os-name }}-*.tar.gz
+            snakes-*-${{ matrix.job.os-name }}-*.sha256
         env:
           GITHUB_TOKEN: ${{ secrets.PAT }}
