Improved replay saving config

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ copypasta = "0.8.1"
 crossbeam-channel = "0.5.6"
 iyes_loopless = "0.9.1"
 rand = "0.8.5"
+regex = "1.7.0"
 serde = { version = "1.0.140", features = ["derive"] }
 serde_yaml = "0.9.1"
 wait-timeout = "0.2.0"
