--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ bevy_easings = { version = "0.9.0", features = ["ui"] }
 bevy_turborand = "0.4.2"
 chrono = "0.4.23"
 clap = { version = "4.0.29", features = ["derive"] }
+colored = "2.0.0"
 copypasta = "0.8.1"
 crossbeam-channel = "0.5.6"
 iyes_loopless = "0.9.1"
