--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "snakes"
-version = "0.6.3"
+version = "0.7.0"
 edition = "2021"
 license = "Apache-2.0"
 
@@ -9,6 +9,7 @@ license = "Apache-2.0"
 [dependencies]
 base64 = "0.21.0"
 bevy = { version = "0.10.1", features = ["wayland", "serialize"] }
+bevy_embedded_assets = "0.7.0"
 bevy-inspector-egui = "0.18.1"
 bevy_easings = { version = "0.10.0", features = ["ui"] }
 bevy_turborand = "0.5.0"
