--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,12 @@ wait-timeout = "0.2.0"
 [profile.dev]
 opt-level = 1
 
+[profile.release]
+opt-level = 'z'   # optimise for size
+codegen-units = 1 # compile everything in serial, allowing for better optimsations
+strip = true      # strip symbols
+lto = true        # link-time optimisation
+
 # Enable high optimizations for dependencies (incl. Bevy), but not for our code:
 [profile.dev.package."*"]
 opt-level = 3
