--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,10 +1,10 @@
 # Default Snakes! Configuration
 ---
-width: 32
-height: 32
+width: 16
+height: 16
 
 # Game settings
-turns: 100
+turns: 500
 turnsPerSecond: 0
 
 seed: the holy grail
@@ -14,7 +14,7 @@ respawn: 2
 # Food configuration
 food:
   value: 5
-  lifetime: 1
+  lifetime: 0
   count: 1
 
 # Player configurations
@@ -23,34 +23,28 @@ players:
   #     type: custom
   #     silent: false
   #     color: venetian red
-  #     executable: ../ferris-old/target/debug/ferris.exe
+  #     cmd: examples/ferris.exe
 
-  # - Keygan:
-  #     type: keyboard
-  #     timeout: 250
-  #     wait: true
-  #     keys:
-  #       north: w
-  #       west: a
-  #       south: s
-  #       east: d
+  - Keygan:
+      type: keyboard
+      timeout: 250
+      wait: false
+      keys:
+        north: w
+        west: a
+        south: s
+        east: d
+#   - Easy:
+#       type: builtin
+#       difficulty: easy
+#       color: green # you can choose colors
 
-  - Randy:
-      type: random
-  - Randier:
-      type: random
-  - Randiest:
-      type: random
-  - Easy:
-      type: builtin
-      difficulty: easy
-      color: green # you can choose colors
-  - Medium:
-      type: builtin
-      color: bluetiful # you can use Crayola color names
-      difficulty: medium
+#   - Medium:
+#       type: builtin
+#       color: bluetiful # you can use Crayola color names
+#       difficulty: medium
 
-  - Hard:
-      type: builtin
-      color: e6bc5c # you can also use hex strings (with or without a #)
-      difficulty: hard
+#   - Hard:
+#       type: builtin
+#       color: e6bc5c # you can also use hex strings (with or without a #)
+#       difficulty: hard
