docs: improve documentation

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,15 +1,15 @@
 # Default Snakes! Configuration
 ---
-width: 16
-height: 16
+width: 32
+height: 32
 
 # Game settings
-turns: 500
+turns: 1500
 turnsPerSecond: 0
 
-seed: the holy grail
+respawn: 10
 
-respawn: 2
+seed: snake byte
 
 # Food configuration
 food:
@@ -19,32 +19,47 @@ food:
 
 # Player configurations
 players:
-  # - Ferris:
-  #     type: custom
-  #     silent: false
-  #     color: venetian red
-  #     cmd: examples/ferris.exe
+  - Random Randy:
+      type: random # makes random moves
 
-  - Keygan:
-      type: keyboard
-      timeout: 250
-      wait: false
+  - Keyboard Keagan:
+      type: keyboard # controlled by a human player
+      timeout: 250 # Custom per-player timeouts
       keys:
-        north: w
-        west: a
-        south: s
-        east: d
-#   - Easy:
-#       type: builtin
-#       difficulty: easy
-#       color: green # you can choose colors
+        north: Up
+        west: Left
+        south: Down
+        east: Right
 
-#   - Medium:
-#       type: builtin
-#       color: bluetiful # you can use Crayola color names
-#       difficulty: medium
+  - External Eddie:
+      type: custom # a hand-coded AI communicating over stdio
+      silent: true # Prevent the output of chatty agents
+      wait: true # Useful for slow snakes, or when you are debugging
+      cmd: python
+      args:
+        - -c
+        - |
+          import sys;
+          w,h = [int(x) for x in input().split(' ')]
+          l,v = [int(x) for x in input().split(' ')]
+          n,i = [int(x) for x in input().split(' ')]
+          m,t = [int(x) for x in input().split(' ')]
+          turn = 0
 
-#   - Hard:
-#       type: builtin
-#       color: e6bc5c # you can also use hex strings (with or without a #)
-#       difficulty: hard
+          directions = ['n', 'n', 'n', 'e', 's', 's', 's', 'w']
+          while True:
+            f = int(input())
+            for i in range(f):
+              r,x,y = [int(x) for x in input().split(' ')]
+            for p in range(n):
+              input()  # read the snake line
+
+            direction = directions[turn % len(directions)]
+            print(direction, file=sys.stdout)
+            print(direction, file=sys.stderr)
+            sys.stdout.flush()
+            turn += 1
+
+  - Hard Harry:
+      type: builtin # a built in basic AI to test yourself against
+      difficulty: hard # easy/medium/hard
